<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.10">
  <GVL Name="CONST" Id="{39265088-fb3e-40e6-8631-86b836e21ef9}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
	  PTS_NUMBER:UDINT:=100000;   //轨迹点的数目
	
	//轨迹命令
	 TRAJ_CMD_NEW:BYTE :=  1;  //读入轨迹
	 TRAJ_CMD_START:BYTE :=  2;  //开始运动
	 TRAJ_CMD_PAUSE:BYTE :=  3;  //暂停运动
	 TRAJ_CMD_STOP:BYTE :=  0;  //停止
	
	
	//机器人模式
	 ROBO_MODE_AUTO:   BYTE :=  1; //自动模式
	 ROBO_MODE_MANNUL:   BYTE :=  2;//手动模式
	 ROBO_MODE_UNKNOW:   BYTE :=  3;//未知模式
	 
	 
	 //状态，True或者FALSE
	 ROBO_STATUS_TRUE:BYTE:=255;
	 ROBO_STATUS_FALSE:BYTE:=0;
	 
	 //错误码
	 ROBO_ERRORCODE_NONE:UINT:=0; //无错误
	 ROBO_ERRORCODE_ALARM:UINT:=10; //报警错误
	 

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>